feat: update "repeat-symbol" task
change function to typescript

--- a/javascript/junior/tsconfig.json
+++ b/javascript/junior/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["get-rgb-values/**/*"],
+  "include": ["repeat-symbol/**/*", "get-rgb-values/**/*"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
