docs: fix main package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prepare-for-interview",
   "version": "1.0.0",
-  "description": "1. [show-increasing-number](javascript/junior/show-increasing-number)\r 2. [show-population](javascript/junior/show-population)\r 3. [find-killer](javascript/junior/find-killer)\r 4. [check-unique-characters](javascript/junior/check-unique-characters)\r 5. [maximum-of-three](javascript/junior/maximum-of-three)\r 6. [get-rgb-values](javascript/junior/get-rgb-values)",
+  "description": "Tasks of varying complexity",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
