--- a/javascript/junior/package.json
+++ b/javascript/junior/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^16.6.2"
   }
 }
