--- a/javascript/junior/package.json
+++ b/javascript/junior/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "compile": "tsc"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^16.6.2"
+    "@types/node": "^16.6.2",
+    "jest": "^27.1.0"
   }
 }
