build: add ESM support

--- a/javascript/junior/package.json
+++ b/javascript/junior/package.json
@@ -16,7 +16,10 @@
     "moduleFileExtensions": [
       "js",
       "html"
-    ]
+    ],
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest"
+    }
   },
   "keywords": [],
   "author": "",
