feat: update test for "hasUniqueChars" task (another solution)

--- a/javascript/junior/package.json
+++ b/javascript/junior/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest --verbose",
+    "test": "jest",
+    "test:verbose": "jest --verbose",
     "compile": "tsc"
   },
   "jest": {
