--- a/javascript/junior/package.json
+++ b/javascript/junior/package.json
@@ -32,7 +32,8 @@
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
-    "@types/node": "^16.6.2",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^16.11.56",
     "babel-jest": "^27.1.0",
     "jest": "^27.1.0"
   }
